[gd_scene load_steps=6 format=3 uid="uid://r4b5sj3hcpng"]

[ext_resource type="Script" path="res://Scenes/UI/settings.gd" id="1_21c5l"]
[ext_resource type="Texture2D" uid="uid://c3qutokgymsff" path="res://Interface/button4.png" id="1_dneyy"]
[ext_resource type="Texture2D" uid="uid://0gqkdsf26hyv" path="res://Interface/background.jpg" id="1_qbmpg"]
[ext_resource type="Texture2D" uid="uid://dcsl0cpot4o50" path="res://Interface/button1.png" id="3_iyiq3"]
[ext_resource type="Texture2D" uid="uid://bgf6x6tgxrmnx" path="res://Interface/button3.png" id="5_jfi58"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_21c5l")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_qbmpg")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("1_dneyy")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 20

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 40
text = "Sounds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 40
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 40
text = "Fullscreen"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.439216)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 40
text = "Resolution"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 25

[node name="Sounds" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="soundsHSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/Sounds"]
layout_mode = 2
value = 50.0
rounded = true

[node name="Music" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_top = 20

[node name="musicHSlider" type="HSlider" parent="MarginContainer/VBoxContainer2/Music"]
layout_mode = 2
value = 50.0
rounded = true

[node name="fullscreenCheckbox" type="CheckBox" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_constants/icon_max_width = 50
theme_override_font_sizes/font_size = 50
expand_icon = true

[node name="resolutionOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
selected = 1
item_count = 2
popup/item_0/text = "1920x1080"
popup/item_1/text = "1280x720"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 200

[node name="Back" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(253, 100)
layout_mode = 2
texture_normal = ExtResource("3_iyiq3")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Back"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 33
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Save" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(253, 100)
layout_mode = 2
texture_normal = ExtResource("3_iyiq3")
texture_pressed = ExtResource("5_jfi58")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Save"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 33
text = "Save"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="changed" from="MarginContainer/VBoxContainer2/Sounds/soundsHSlider" to="." method="_on_sounds_h_slider_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
